--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -6,3 +6,7 @@
     justify-content: space-between;
     padding-bottom: 100px;
 }
+
+.navigation .left-navigation .navlink li {
+    text-decoration: none;
+}
