--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -12,7 +12,7 @@
 }
 
 .navigation .left-navigation .navlink li {
-    color: #30a528;
+    color: red;
     list-style: none;
     font-size: 30px;
     padding: 0px 10px;
