--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -7,7 +7,7 @@
     padding-bottom: 100px;
 }
 
-.navigation .left-navigation .navlink li {
+.navigation .left-navigation .navlink {
     text-decoration: none;
 }
 
