--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-between;
     padding-bottom: 100px;
+    background: yellow;
 }
 
 .navigation .left-navigation .navlink {
