--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -35,3 +35,10 @@
 .body-navbar {
     background: white;
 }
+
+footer {
+    text-align: center;
+  padding: 3px;
+  background-color: DarkSalmon;
+  color: white;
+}
