--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -39,9 +39,9 @@
 }
 
 footer {
-width: 100%;
-text-align: center;
-  background-color: red;
+  width: 100%;
+  text-align: center;
+  background-color: rgb(255, 77, 77);
   color: white;
   padding: 90px 0;
 }
