--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -41,7 +41,7 @@
 footer {
   width: 100%;
   text-align: center;
-  background-color: rgb(255, 77, 77);
+  background-color: red;
   color: white;
   padding: 90px 0;
 }
