--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
   }
 
+  body {
+    width: 100%;
+  }
+
 /** components - navigation.js */
 
 .navigation {
@@ -12,8 +16,6 @@
     justify-content: space-between;
     padding-bottom: 25px;
     background: red;
-    width: 100%;
-    text-align: center;
 }
 
 .navigation .left-navigation .navlink {
