--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -54,7 +54,9 @@ footer {
 
 /* Home.js */
 .cards .card {
-    border-radius: 20px;
-    background-color: yellow;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    border-radius: 5px;
 }
 
