--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -54,9 +54,12 @@ footer {
 
 /* Home.js */
 .cards .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 40%;
-    border-radius: 5px;
+    color: #D32F2F;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 600;
+  border-bottom: 1px solid #EF9A9A;
+  background-color: #FFEBEE;
+  padding: 5px 10px;
 }
 
