--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -53,6 +53,17 @@ footer {
 
 
 /* Home.js */
+
+.cards {
+    width: 150px;                 /* Set width of cards */
+    display: flex;                /* Children use Flexbox */
+    flex-direction: column;       /* Rotate Axis */
+    border: 1px solid #EF9A9A;    /* Set up Border */
+    border-radius: 4px;           /* Slightly Curve edges */
+    overflow: hidden;             /* Fixes the corners */
+    margin: 5px;                  /* Add space between cards */
+  }
+  
 .cards .card {
     color: #D32F2F;
   text-align: center;
