--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -83,6 +83,10 @@ footer {
     align-items: center;        
   }*/
 
+  .display-cards {
+    display: flex;
+  }
+
   .cards {
 	height: auto;
 	width: 250px;
@@ -93,7 +97,7 @@ footer {
 }
 
 .cards .card {
-  border: 2px solid  #cdcdcd;
+  border: 2px solid  #cdcdcd;;
   border-radius: 12px;
   padding: 20px;
   
@@ -106,14 +110,64 @@ footer {
     margin: 20px 0px;
 }
 
+.card-desc .bonus  {
+  color: white;
+  background-color: blue;
+  text-align: center;
+  font-size: 20px;
+  font-family: Source Sans Pro, Helvetica, Arial, sans-serif;
+}
+
+.card-desc .mydesc {
+  border: 2px solid  #cdcdcd;;
+  border-radius: 10px;
+  margin: 20px 0px;
+}
+
+.cards .card .card-desc .mydesc li {
+  padding: 10px 10px;
+}
+
 .cards .card hr {
    border: 0.1px solid #4e4e4e;
    
 }
 
+.cards .card .celebrity p {
+  color: white;
+  background-color: blue;
+  border-radius: 20px;
+  padding: 10px 10px;
+  text-align: center;
+}
+
+.cards .card .card-desc {
+  text-decoration: none;
+}
 
 .cards .card .card-desc p {
-    
-    padding: 20px 0px;
-    
+  padding: 20px;
+}
+
+.cards .card .card-desc .price {
+  text-align: center;
+}
+
+.cards .card .card-desc .price p {
+    padding: 10px;
+  }
+
+  .cards .card .card-desc .price h1 {
+    font-size: 50px;
+  }
+
+  .cards .card .card-desc  button {
+    color: white;
+    text-align: center;
+    background-color: red;
+    cursor: pointer;
+    border: none;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
