--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -4,13 +4,289 @@
     flex-wrap: wrap;
   }
 
-  body {
-    width: 100%;
-             
+  .navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: red;
+    padding: 20px;
   }
 
-/** components - navigation.js */
+  .navigation .right-navigation .navlink {
+    text-decoration: none;
+}
 
+.navigation .right-navigation .navlink li {
+    display: inline;
+    color: white;
+    list-style: none;
+    padding: 10px 20px;
+    font-size: 22px;
+}
+
+.navigation .left-navigation .navlink {
+  text-decoration: none;
+}
+
+.navigation .left-navigation .navlink li {
+  color: white;
+  list-style: none;
+  font-size: 30px;
+  padding: 0px 10px;
+}
+
+.introduce .introduce-title {
+  padding: 170px;
+  color: black;
+  font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+  text-align: center;
+  font-size: 35px;
+}
+
+.introduce-title button {
+  color: white;
+  text-align: center;
+  background-color: blue;
+  cursor: pointer;
+  border: none;
+  padding: 10px 20px;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 20px;
+}
+
+.introduce-title p {
+  padding: 30px 0px;
+}
+
+.introduce .introduce-mytitle {
+  margin-bottom: 100px;
+  padding: 60px;
+  background: red;
+  color: white;
+  font-size: 25px;
+}
+
+.introduce .introduce-mytitle p {
+  padding: 10px 0px;
+}
+
+/* Partner.js */
+    .div {
+      width: 100%;
+      text-align: center;
+      background-color: red;
+      font-size: 30px;
+      color: white;
+      padding: 90px 0;
+        -webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
+        clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
+        position: absolute;
+    }
+
+    .p3 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      padding: 400px 300px;
+    }
+
+    .p3 p {
+      font-size: 20px;
+      padding: 30px 0px;
+    }
+
+    .p3  button {
+      color: white;
+      text-align: center;
+      background-color: blue;
+      cursor: pointer;
+      border: none;
+      padding: 10px 20px;
+      font-size: 20px;
+      font-family: Roboto, Arial, sans-serif;
+    }
+
+    .posts {
+      padding: 100px 0px;
+    }
+
+
+    .introduce .posts .post li { 
+      padding: 10px 0px;
+    }
+
+    .introduce .posts .post {
+      width: auto;
+      border: 2px solid #cdcdcd;
+      border-radius: 12px;
+      padding: 50px;
+    }
+
+    .contact-title {
+      width: 300px;
+      height: auto;
+      padding: 20px;
+      font-size: 18px;
+      border: 3px solid  #4e4e4e;
+      margin-top: 100px;
+      border-radius: 15px;
+    }
+
+    .contact {
+      display: flex;
+      justify-content: center;
+      align-items: center;  
+      flex-direction: column;
+      font-family: "Roboto", sans-serif;
+    }
+
+    .display-cards {
+      display: flex;
+      padding-bottom: 200px;
+    }
+  
+    .cards {
+    height: auto;
+    width: 250px;
+      font-size: 19px;
+    padding: 30px;
+    color: #4e4e4e;
+  }
+  
+  .cards .card {
+    border: 2px solid  #cdcdcd;;
+    border-radius: 12px;
+    padding: 20px;
+  }
+
+  
+.cards .card h3 {
+  color:  #4e4e4e;
+  font-family: Helvetica, sans-serif;
+  text-align: center;
+  margin: 20px 0px;
+}
+
+.card-desc .bonus  {
+color: white;
+background-color: blue;
+text-align: center;
+font-size: 20px;
+font-family: Source Sans Pro, Helvetica, Arial, sans-serif;
+}
+
+.card-desc .mydesc {
+border: 2px solid  #cdcdcd;;
+border-radius: 10px;
+margin: 20px 0px;
+}
+
+.cards .card .card-desc .mydesc li {
+padding: 10px 10px;
+}
+
+.cards .card hr {
+ border: 0.1px solid #4e4e4e;
+ 
+}
+
+.cards .card .celebrity p {
+color: white;
+background-color: blue;
+border-radius: 20px;
+padding: 10px 10px;
+text-align: center;
+}
+
+.cards .card .card-desc {
+text-decoration: none;
+}
+
+.cards .card .card-desc p {
+padding: 20px;
+}
+
+.cards .card .card-desc .price {
+text-align: center;
+}
+
+.cards .card .card-desc .price p {
+  padding: 10px;
+}
+
+.cards .card .card-desc .price h1 {
+  font-size: 50px;
+}
+
+.cards .card .card-desc  button {
+  color: white;
+  text-align: center;
+  background-color: red;
+  cursor: pointer;
+  border: none;
+  padding: 10px 20px;
+  font-size: 20px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+/* Footer.js */
+
+footer {
+  width: 100%;
+  text-align: center;
+  background-color: red;
+  color: white;
+  padding: 90px 0;
+
+    -webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
+    clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
+    position: absolute;
+  }
+
+  footer .footer-linkk {
+    text-decoration: none;
+  }
+  
+  
+  footer .footer-link p {
+  color: white;
+}
+
+
+ /* politique Actions */
+  .main-politique {
+    color: #4e4e4e;
+    font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+    padding: 10px;
+  }
+
+  .politique {
+    padding: 20px 30px;
+  }
+
+  .back-btn button{
+    background-color: transparent;
+      color: black;
+      text-align: center;
+      font-size: 15px;
+      padding: 10px 15px;
+      border-radius: 20px;
+      margin: px 20px;
+      border: 3px solid black;
+    cursor: pointer;
+    }
+
+
+
+/*
+  body {
+    width: 100%;
+  }*/
+
+/** components - navigation.js */
+/*
 .navigation {
     display: flex;
     align-items: center;
@@ -42,7 +318,11 @@
     font-size: 22px;
 }
 
-/* Footer.js */
+  /*-webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
+    clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
+    position: relative;*/
+
+/* Footer.js 
 
 footer {
   width: 100%;
@@ -50,9 +330,7 @@ footer {
   background-color: red;
   color: white;
   padding: 90px 0;
-  /*-webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
-    clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
-    position: relative;*/
+
     -webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
     clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
     position: absolute;
@@ -90,13 +368,7 @@ footer {
   padding: 5px 10px;
 }
 
-.cards .card-desc {
-    height: auto;  
-    display: flex;    
-    flex-direction: column; 
-    justify-content: center;    
-    align-items: center;        
-  }*/
+
 
   .display-cards {
     display: flex;
@@ -109,14 +381,12 @@ footer {
     font-size: 19px;
 	padding: 30px;
 	color: #4e4e4e;
-    
 }
 
 .cards .card {
   border: 2px solid  #cdcdcd;;
   border-radius: 12px;
   padding: 20px;
-  
 }
 
 .cards .card h3 {
@@ -210,7 +480,7 @@ footer {
 
 
   /* src-component- ContactAction.js */
-  /* je vais regarder ici pour regler le cadre du signup dans jamelfase*/
+  /* je vais regarder ici pour regler le cadre du signup dans jamelfase
   .contact {
     display: flex;
     justify-content: center;
@@ -229,7 +499,7 @@ footer {
     border-radius: 15px;
   }
 
-  /* ConditionsAcions*/
+  /* ConditionsAcions
   .conditions {
     color: #4e4e4e;
     font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -237,7 +507,7 @@ footer {
   }
 
     
-  /* politique Acions*/
+  /* politique Actions
   .main-politique {
     color: #4e4e4e;
     font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -261,7 +531,7 @@ footer {
     }
 
 
-    /* Partner.js */
+    /* Partner.js 
     .div {
       width: 100%;
       text-align: center;
@@ -269,9 +539,6 @@ footer {
       font-size: 30px;
       color: white;
       padding: 90px 0;
-      /*-webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
-        clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
-        position: relative;*/
         -webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
         clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
         position: absolute;
@@ -302,16 +569,7 @@ footer {
       font-family: Roboto, Arial, sans-serif;
     }
 
-.introduce-title button {
-  color: white;
-  text-align: center;
-  background-color: blue;
-  cursor: pointer;
-  border: none;
-  padding: 10px 20px;
-  font-size: 20px;
-  font-family: Roboto, Arial, sans-serif;
-}
+
 
 .introduce-title p {
   padding: 30px 0px;
@@ -337,3 +595,117 @@ footer {
 .introduce .posts .post li { 
   padding: 10px 0px;
 }
+*/
+
+@media screen and (max-width: 390px) {
+  
+.navigation .right-navigation .navlink li {
+    display: inline;
+    color: white;
+    list-style: none;
+    padding: 10px 20px;
+    font-size: 18px;
+}
+
+.navigation .left-navigation .navlink {
+  text-decoration: none;
+}
+
+.navigation .left-navigation .navlink li {
+  color: white;
+  list-style: none;
+  font-size: 22px;
+  padding: 0px 10px;
+}
+
+.introduce .introduce-title {
+  padding: 70px 30px;
+  color: black;
+  font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+  text-align: center;
+  font-size: 25px;
+}
+
+.introduce-title button {
+  color: white;
+  text-align: center;
+  background-color: blue;
+  cursor: pointer;
+  border: none;
+  padding: 10px 20px;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 16px;
+}
+
+    .div {
+      width: 100%;
+      text-align: center;
+      background-color: red;
+      font-size: 20px;
+      color: white;
+      padding: 90px 0;
+        -webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
+        clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
+        position: absolute;
+    }
+
+    .p3 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      padding: 350px 50px;
+    }
+
+    .p3  button {
+      color: white;
+      text-align: center;
+      background-color: blue;
+      cursor: pointer;
+      border: none;
+      padding: 10px 20px;
+      font-family: Roboto, Arial, sans-serif;
+      font-size: 16px;
+    }
+
+    .posts {
+      padding: 80px 0px;
+    }
+
+    .introduce .posts .post li { 
+      padding: 10px 0px;
+      font-size: 18px;
+    }
+
+    .introduce .posts .post {
+      width: auto;
+      border: 2px solid #cdcdcd;
+      border-radius: 12px;
+      padding: 40px 30px;
+    }
+
+    .contact-title {
+      width: 250px;
+      height: auto;
+      padding: 20px;
+      font-size: 16px;
+      border: 3px solid  #4e4e4e;
+      margin-top: 100px;
+      border-radius: 15px;
+    }
+
+    .introduce .introduce-mytitle {
+      margin-bottom: 100px;
+      padding: 60px;
+      background: red;
+      color: white;
+      font-size: 22px;
+    }
+    
+    .introduce .introduce-mytitle p {
+      padding: 10px 0px;
+    }
+    
+}
+
+
