--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -637,7 +637,7 @@ footer {
     display: inline;
     color: white;
     list-style: none;
-    padding: 10px 10px;
+    padding: 10px 5x;
     font-size: 18px;
 }
 
