--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -234,12 +234,12 @@ text-align: center;
 /* Footer.js */
 
 footer {
-  width: 100%;
-  text-align: center;
-  background-color: red;
-  color: white;
-  padding: 90px 0;
-
+    width: 100%;
+    text-align: center;
+    background-color: red;
+    color: white;
+    padding: 90px 0;
+    margin: 300px 0;
     -webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
     clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
     position: absolute;
@@ -313,323 +313,35 @@ footer {
       padding: 10px 0px;
     }
 
+/* components - partner - millions.js */
 
-/*
-  body {
-    width: 100%;
-  }*/
-
-/** components - navigation.js */
-/*
-.navigation {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    background: red;
+.millions {
+  margin: -300px 0px;
 }
 
-.navigation .left-navigation .navlink {
-    text-decoration: none;
+.million p {
+  color: black;
+  padding: 30px 20px;
+  font-size: 30px;
 }
 
-.navigation .left-navigation .navlink li {
-    color: white;
-    list-style: none;
-    font-size: 30px;
-    padding: 0px 10px;
-}
-
-.navigation .right-navigation .navlink {
-    text-decoration: none;
-}
-
-.navigation .right-navigation .navlink li {
-    display: inline;
-    color: white;
-    list-style: none;
-    padding: 10px 20px;
-    font-size: 22px;
-}
-
-  /*-webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
-    clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
-    position: relative;*/
-
-/* Footer.js 
-
-footer {
-  width: 100%;
+.millions .button {
   text-align: center;
-  background-color: red;
-  color: white;
-  padding: 90px 0;
-
-    -webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
-    clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
-    position: absolute;
-  }
-
-  footer .footer-linkk {
-    text-decoration: none;
-  }
-  
-  
-  footer .footer-link p {
-  color: white;
+  padding: 50px 0px;
 }
 
-
-/* Home.js */
-/*
-.cards {
-    width: 150px; 
-    display: flex;                
-    flex-direction: column;       
-    border: 1px solid #EF9A9A;   
-    border-radius: 4px;           
-    overflow: hidden;           
-    margin: 5px;                
-  }
-
-.cards .card-header {
-    color: #D32F2F;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 600;
-  border-bottom: 1px solid #EF9A9A;
-  background-color: #FFEBEE;
-  padding: 5px 10px;
-}
-
-
-
-  .display-cards {
-    display: flex;
-    padding-bottom: 200px;
-  }
-
-  .cards {
-	height: auto;
-	width: 250px;
-    font-size: 19px;
-	padding: 30px;
-	color: #4e4e4e;
-}
-
-.cards .card {
-  border: 2px solid  #cdcdcd;;
-  border-radius: 12px;
-  padding: 20px;
-}
-
-.cards .card h3 {
-    color:  #4e4e4e;
-    font-family: Helvetica, sans-serif;
-    text-align: center;
-    margin: 20px 0px;
-}
-
-.card-desc .bonus  {
+.millions .button button {
   color: white;
   background-color: blue;
-  text-align: center;
-  font-size: 20px;
+  border: none;
   font-family: Source Sans Pro, Helvetica, Arial, sans-serif;
-}
-
-.card-desc .mydesc {
-  border: 2px solid  #cdcdcd;;
-  border-radius: 10px;
-  margin: 20px 0px;
-}
-
-.cards .card .card-desc .mydesc li {
-  padding: 10px 10px;
-}
-
-.cards .card hr {
-   border: 0.1px solid #4e4e4e;
-   
-}
-
-.cards .card .celebrity p {
-  color: white;
-  background-color: blue;
-  border-radius: 20px;
-  padding: 10px 10px;
-  text-align: center;
-}
-
-.cards .card .card-desc {
-  text-decoration: none;
-}
-
-.cards .card .card-desc p {
-  padding: 20px;
-}
-
-.cards .card .card-desc .price {
-  text-align: center;
-}
-
-.cards .card .card-desc .price p {
-    padding: 10px;
-  }
-
-  .cards .card .card-desc .price h1 {
-    font-size: 50px;
-  }
-
-  .cards .card .card-desc  button {
-    color: white;
-    text-align: center;
-    background-color: red;
-    cursor: pointer;
-    border: none;
-    padding: 10px 20px;
-    font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  }
-
-  .introduce .introduce-title {
-    padding: 170px;
-    color: black;
-    font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
-    text-align: center;
-    font-size: 35px;
-  }
-
-  .introduce .introduce-mytitle {
-    margin-bottom: 100px;
-    padding: 60px;
-    background: red;
-    color: white;
-    font-size: 25px;
-  }
-
-  .introduce .introduce-mytitle p {
-    padding: 10px 0px;
-  }
-
-
-  /* src-component- ContactAction.js */
-  /* je vais regarder ici pour regler le cadre du signup dans jamelfase
-  .contact {
-    display: flex;
-    justify-content: center;
-    align-items: center;  
-    flex-direction: column;
-    font-family: "Roboto", sans-serif;
-  }
-
-  .contact-title {
-    width: 300px;
-    height: auto;
-    padding: 20px;
-    font-size: 18px;
-    border: 3px solid  #4e4e4e;
-    margin-top: 100px;
-    border-radius: 15px;
-  }
-
-  /* ConditionsAcions
-  .conditions {
-    color: #4e4e4e;
-    font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
-    padding: 20px;
-  }
-
-    
-  /* politique Actions
-  .main-politique {
-    color: #4e4e4e;
-    font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
-    padding: 10px;
-  }
-
-  .politique {
-    padding: 20px 30px;
-  }
-
-  .back-btn button{
-    background-color: transparent;
-      color: black;
-      text-align: center;
-      font-size: 15px;
-      padding: 10px 15px;
-      border-radius: 20px;
-      margin: px 20px;
-      border: 3px solid black;
-    cursor: pointer;
-    }
-
-
-    /* Partner.js 
-    .div {
-      width: 100%;
-      text-align: center;
-      background-color: red;
-      font-size: 30px;
-      color: white;
-      padding: 90px 0;
-        -webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
-        clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
-        position: absolute;
-    }
-
-    .p3 {
-      display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-      padding: 400px;
-    }
-
-    .p3 p {
-      font-size: 20px;
-      padding: 30px 0px;
-    }
-
-
-    .p3  button {
-      color: white;
-      text-align: center;
-      background-color: blue;
-      cursor: pointer;
-      border: none;
-      padding: 10px 20px;
-      font-size: 20px;
-      font-family: Roboto, Arial, sans-serif;
-    }
-
-
-
-.introduce-title p {
-  padding: 30px 0px;
+  font-size: 20px;
+  padding: 20px 30px;
+  border-radius: 50px;
 }
 
 
-.introduce .posts {
-	color: #4e4e4e;
-  padding: 100px 0px;
-}
 
-.introduce .posts .post {
-  width: auto;
-  border: 2px solid #cdcdcd;
-  border-radius: 12px;
-  padding: 50px;
-}
-
-.posts .post p {
-  padding: 10px 0px;
-}
-
-.introduce .posts .post li { 
-  padding: 10px 0px;
-}
-*/
 
 @media screen and (max-width: 760px) {
 
@@ -744,6 +456,29 @@ footer {
       padding: 10px 0px;
     }
 
+    .million p {
+      color: black;
+      display: flex;
+      align-items: center;
+      justify-content: column;
+      padding: 30px 20px;
+      font-size: 25px;
+    }
+    
+    .millions .button {
+      text-align: center;
+      padding: 50px 0px;
+    }
+    
+    .millions .button button {
+      color: white;
+      background-color: blue;
+      border: none;
+      font-family: Source Sans Pro, Helvetica, Arial, sans-serif;
+      font-size: 18px;
+      padding: 10px 15px;
+      border-radius: 50px;
+    }
     
 }
 
