--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -423,13 +423,14 @@ footer {
     }
 
     .introduce .posts .post li { 
-      padding: 10px -20px;
+      padding: 10px 0px;
       font-size: 16px;
+      color: black;
     }
 
     .introduce .posts .post p { 
       font-size: 16px;
-      padding: 10px -20px;
+      padding: 10px 0px;
     }
 
     .introduce .posts .post h1 { 
