--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -284,10 +284,11 @@ footer {
 }
 
 .millions .button button {
+  font-family: Source Sans Pro, Helvetica, Arial, sans-serif;
+  cursor: pointer;
   color: white;
   background-color: blue;
   border: none;
-  font-family: Source Sans Pro, Helvetica, Arial, sans-serif;
   font-size: 20px;
   padding: 20px 30px;
   border-radius: 50px;
@@ -441,16 +442,6 @@ footer {
   font-size: 16px;
 }
 
-/* src - component- Print.js */
-
-.print {
-  text-align: center;
-  padding: 40px;
-}
-
-.print-details {
-  padding-top: 50px 0px;
-}
 
 /* src - components - navigation menu.js */
 
