--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -377,7 +377,7 @@ footer {
 }
 */
 
-/* src - components - partenaire Omisify - SaliouHeader.js */
+/* src - components - partenaire Omisify - ...Header.js */
 .profil {
   display: flex;
   align-items: center;
@@ -465,7 +465,7 @@ footer {
   color: #551a8b;
 }
 
-/* src - components - partenaire omisify - Wilfried Active Historical.js*/
+/* src - components - partenaire omisify - ...Active Historical.js*/
 
 .historical {
   display: flex;
@@ -600,6 +600,47 @@ footer {
   font-size: 14px;
 }
 
+/*  Stats details */
+
+.flex-stats {
+  display: flex;
+}
+.stats {
+  padding: 30px;
+  flex-direction: column;
+}
+
+.stats-big-title {
+  color: white;
+  background-color: red;
+  padding: 10px 20px;
+  font-size: 25px;
+  margin-bottom: 100px;
+}
+
+.stats-title {
+  background-color: #444;
+  color: #ccc;
+  padding: 10px 20px;
+}
+
+.stats-cards  {
+  flex-wrap: wrap;
+  border: 3px solid #ccc;
+  padding: 20px 0px;
+}
+
+.stats-cards .a p {
+  padding: 0px 10px;
+  font-size: 16px;
+}
+
+.stats .total {
+  font-weight: bold;
+  font-size: 17px;
+  background-color: #eee;
+  padding: 10px 20px;
+}
 
 
 
@@ -778,3 +819,13 @@ footer {
 }
 
 
+
+
+@media screen and (max-width: 488px) {
+ 
+  .flex-stats {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
