--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -744,7 +744,7 @@ display: flex;
   cursor: pointer;
 }
 
-/* update september*/
+/* src - components - partenaire omisify -  update september*/
 .update {
   text-align: center;
   padding: 70px 0px;
@@ -765,7 +765,23 @@ display: flex;
 
 .update .navlink p{
   padding: 20px 0px;
-  
+}
+
+/* src - components - partenaire omisify - Add September*/
+
+.go-to-refresh {
+  text-align: center;
+  font-size: 17px;
+}
+
+.go-to-refresh button {
+  color: red;
+  padding: 10px 20px;
+  background-color: transparent;
+  border: 1px solid red;
+  margin: 30px 0px;
+  border-radius: 20px;
+  font-size: 14px;
 }
 
 @media screen and (max-width: 760px) {
