--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -704,7 +704,7 @@ display: flex;
   flex-direction: column;
 }
 
-.login-border .input input[type=text] {
+.login-border .input input[type=text] input[type=email] {
   padding: 10px ;
   margin: 10px 0px;
   background-color: transparent;
