--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -667,7 +667,7 @@ display: flex;
 
 */
 
-/* connexion.js */
+/* login.js */
 .login {
   display: flex;
   align-items: center;
@@ -704,7 +704,7 @@ display: flex;
   flex-direction: column;
 }
 
-.login-border .input input[type=text] input[type=email] {
+.login-border .input input[type=text], input[type=email] {
   padding: 10px ;
   margin: 10px 0px;
   background-color: transparent;
