--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -939,6 +939,37 @@ footer {
   padding: 10px 0px;
 }
 
+/* src - components - update - update success.js*/
+.update-success {
+  text-align: center;
+  padding: 50px 0px;
+}
+
+.update-success .title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.update-success .a {
+  padding: 30px 0px;
+}
+
+.update-success .a p {
+  padding: 30px 10px;
+}
+
+.update-success .a button {
+  cursor: pointer;
+  font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+  background-color: transparent;
+  color: blue;
+  border: 1px solid blue;
+  border-radius: 3px;
+  padding: 10px 20px;
+  font-size: 16px;
+}
+
+
 
 @media screen and (max-width: 760px) {
   
