--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1068,6 +1068,50 @@ footer {
   color: white;
 }
 
+/* src - component - bonus - welcome bonus.js */
+.welcome-bonus {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 30px 0px;
+}
+
+.welcome-bonus .title {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 30px 0px;
+}
+
+.welcome-bonus .a p {
+  padding: 20px 20px;
+}
+
+.welcome-bonus .a input[type="text"] {
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 1px;
+  padding: 18px 20px;
+  text-align: center;
+}
+
+.welcome-bonus button {
+  cursor: pointer;
+  font-family: Roboto, Arial, sans-serif;
+  color: white;
+  padding: 10px 20px;
+  margin: 60px 0px;
+  border: 1px solid blue;
+  border-radius: 5px;
+  background-color: blue;
+  font-size: 15px;
+}
+
+.welcome-bonus button:hover {
+  color: blue;
+  background-color: white;
+}
+
 
 @media screen and (max-width: 760px) {
   
