--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -685,6 +685,7 @@ footer {
   margin: 10px 0px;
   background-color: transparent;
   border-radius: 10px;
+  border: 1px solid black;
 }
 
 .input button {
