--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1114,32 +1114,24 @@ footer {
 }
 
 /* admin - navigation - navigation.js */
-.panel {
+
+.panel-main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.panel-nav .a {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  padding: 70px 0px;
 }
 
-.panel-nav {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-}
-
-.panel-nav .a .navlink {
-  text-decoration: none;
-}
-
-.panel-nav .a .navlink li {
-  color: red;
-  list-style: none;
-}
 
 
 @media screen and (max-width: 760px) {
-  
-
   .update .title {
     color: white;
     font-size: 20px;
