--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1146,6 +1146,7 @@ footer {
 }
 
 .infos .title button {
+  cursor: pointer;
   background-color: transparent;
   margin: 0px 5px;
   padding: 5px 10px;
