--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -614,8 +614,8 @@ footer {
   color: white;
   background-color: red;
   padding: 10px 20px;
-  font-size: 25px;
-  margin-bottom: 100px;
+  font-size: 18px;
+  margin-bottom: 40px;
 }
 
 .stats-title {
@@ -731,85 +731,6 @@ footer {
   cursor: pointer;
 }
 
-/* src - components - partenaire omisify -  update september*/
-.update-point {
-  text-align: center;
-  padding: 70px 0px;
-  font-size: 17px;
-  text-decoration: none;
-}
-
-.update-title {
-  padding: 30px 0px;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.update .navlink {
-  text-decoration: none;
-  color: #551a8b;
-}
-
-.update .navlink p{
-  padding: 20px 0px;
-}
-
-/* src - components - partenaire omisify - Add September*/
-
-.go-to-refresh {
-  text-align: center;
-  font-size: 17px;
-}
-
-.go-to-refresh button {
-  cursor: pointer;
-  color: red;
-  padding: 10px 20px;
-  background-color: transparent;
-  border: 1px solid red;
-  margin: 30px 0px;
-  border-radius: 20px;
-  font-size: 14px;
-}
-
-/* src - components - september - update comment */
-
-.update-comment {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-  padding-bottom: 30px;
-}
-
-.update-comment .title {
-  color: blue;
-  padding: 20px 0px;
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.update-comment .a {
-  margin: 20px 0px;
-}
-
-.update-comment input[type=text] {
-  background-color: transparent;
-  padding: 20px 30px;
-  border: 1px solid black;
-}
-
-.update-comment button {
-  font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
-  color: blue;
-  background-color: transparent;
-  border: 1px solid blue;
-  font-size: 16px;
-  padding: 10px 20px;
-  margin: 20px 0px;
-  border-radius: 10px;
-}
 
 /* src - component - auth - login nav */
 .navigation-login-nav {
@@ -901,7 +822,7 @@ footer {
   padding: 10px 20px;
 }
 
-/* update */
+/*  src - components - update - update.js */
 .update {
   padding: 50px 0px;
   text-align: center;
@@ -1199,6 +1120,85 @@ footer {
   font-size: 15px;
 }
 
+
+/* src - components - partenaire omisify - Add September*/
+
+.go-to-refresh {
+  text-align: center;
+  font-size: 17px;
+}
+
+.go-to-refresh button {
+  cursor: pointer;
+  color: red;
+  padding: 10px 20px;
+  background-color: transparent;
+  border: 1px solid red;
+  margin: 30px 0px;
+  border-radius: 20px;
+  font-size: 14px;
+}
+
+/* src - components - update point - update point.js */
+.update-point {
+  text-align: center;
+  padding: 10px 0px;
+  font-size: 17px;
+  text-decoration: none;
+}
+
+.update-point .update-title {
+  padding: 30px 0px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.update-point .navlink {
+  text-decoration: none;
+  color: #551a8b;
+}
+
+.update-point .navlink p{
+  padding: 20px 0px;
+}
+
+/* src - components - october - update comment */
+.update-comment {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.update-comment .title {
+  color: blue;
+  padding: 20px 0px;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.update-comment .a {
+  margin: 20px 0px;
+}
+
+.update-comment input[type=text] {
+  background-color: transparent;
+  padding: 20px 30px;
+  border: 1px solid black;
+}
+
+.update-comment button {
+  font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+  color: blue;
+  background-color: transparent;
+  border: 1px solid blue;
+  font-size: 16px;
+  padding: 10px 20px;
+  margin: 20px 0px;
+  border-radius: 10px;
+}
 
 /* admin - navigation - navigation.js */
 
