--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1043,6 +1043,16 @@ footer {
   color: white;
 }
 
+.welcome-bonus .a #generosity-days {
+  font-family: Roboto, Arial, sans-serif;
+  border: 1px solid #ccc;
+  color: #444;
+  background-color: transparent;
+  border-radius: 10px;
+  padding: 5px 10px;
+  font-size: 15px;
+}
+
 /* src - component -settings - infos.js */
 .infos {
   padding-bottom: 70px;
